kubernetes/nginx-ingress/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-reverse-proxy
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: api.players.com  
    http:
      paths:
      - path: /v1(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: players-v1-service 
            port:
              number: 8000   # TODO 8000 o 8080
       #- path: /v2(/|$)(.*)
       #  pathType: Prefix
       #  backend:
       #    service:
       #      name: players-v2-service 
        #     port:
         #      number: 8000   # TODO 8000 o 8080
